--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         }
 
         .parallax {
-            background-image: url("IMAGE.jpg");
+            background-image: url("IMAGE.jpeg");
             height: 100vh;
             background-attachment: fixed;
             background-position: center;
